2007-06-25  Claes Nästén  <me{@}pekdon{.}net>

	* src/PMenu.cc (PMenu::buildMenuRenderItem): 
	Add rendering of icons in the menu, add Icon = "/path/to/icon" in the
	configuration for setting icons on menu entries.

	* src/PImageNativeIcon.cc (PImageNativeIcon::load): 
	Add loading of _NET_WM_ICON property of icons for display in menus.

2007-06-24  Claes Nästén  <me{@}pekdon{.}net>

	* src/FontHandler.cc (FontHandler::getFont): 
	Use XMB fonts as default instead of X11 fonts to support drawing
	of multi byte strings. Closing #15
	(Thanks pagaltzis{@}gmx{.}de for reporting.)

	* src/PWinObj.cc (PWinObj::moveResize): 
	Add PWinObj::moveResize and use it to do more efficient updates when
	doing both move and resize after each other.

2007-06-18  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.hh (TitleItem::TitleItem): 
	Start using wstring instead of string for client titles and other
	printable data. Still need to add iconv support and reading/setting
	of UTF-8 string properties to read client titles properly.

	* src/CmdDialog.cc (CmdDialog::bufAdd): 
	Use wstring in the CmdDialog and iswprint to check for printability
	in order to resolve non ASCII input issues. Closing #104
	(Thanks lukas for reporting)

2007-05-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::Client): 
	Add fix for broken iconified state after restart. Closing #38
	(Thanks giuliani{.}blackfenix{@}gmail{.}com for reporting)

	* data/autoproperties: 
	Added type rules to autoproperties file.
	Added removal of border and titlebar for customize toolbar dialog
	in firefox.

	* src/Frame.cc (Frame::applyAPGeometry): 
	Change handling of auto properties geometry so < 1 in width/height
	means screen width/height.

	* src/AutoProperties.cc (AutoProperties::parseTypeProperty): 
	Made _NET_WM_WINDOW_TYPE handling configurable by creating a new
	set of auto properties called TypeRules. If nothing is changed the old
	default behaviour is still there apart from geometry of desktop class